--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   provider: ^6.1.1
   firebase_core: ^2.26.0
+  shared_preferences: ^2.2.0
+  flutter_svg: ^2.0.0
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
@@ -66,29 +69,26 @@ flutter:
   assets:
     - assets/lang/en.json
     - assets/lang/he.json
+    - assets/images/
+    - assets/images/svg/
+    - assets/images/png/
 
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # For details regarding adding assets from package dependencies, see
-  # https://flutter.dev/assets-and-images/#from-packages
-
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: JakartaLight
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-Light.ttf
+    - family: JakartaRegular
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-Regular.ttf
+    - family: JakartaMedium
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-Medium.ttf
+    - family: JakartaSemibold
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-SemiBold.ttf
+    - family: JakartaBold
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-Bold.ttf
+    - family: JakartaExtraBold
+      fonts:
+        - asset: assets/fonts/PlusJakartaSans-ExtraBold.ttf
