--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   shared_preferences: ^2.2.0
   flutter_svg: ^2.0.0
   cloud_firestore: ^4.14.0
+  firebase_auth: ^4.17.7
 
 dev_dependencies:
   flutter_test:
