--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_svg: ^2.0.0
   cloud_firestore: ^4.14.0
   firebase_auth: ^4.17.7
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
