--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_auth: ^4.17.7
   image_picker: ^1.1.2
+  bot_toast: ^4.1.3
 
 dev_dependencies:
   flutter_test:
