--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_auth: ^4.17.7
   image_picker: ^1.1.2
   bot_toast: ^4.1.3
+  firebase_storage: ^11.6.0
 
 dev_dependencies:
   flutter_test:
