--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   image_picker: ^1.1.2
   bot_toast: ^4.1.3
   firebase_storage: ^11.6.0
+  file_picker: ^8.0.0
 
 dev_dependencies:
   flutter_test:
