--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   cached_network_image: ^3.4.0
   firebase_storage: ^11.6.0
   file_picker: ^8.0.0
+  image: ^4.5.2
 
 dev_dependencies:
   flutter_test:
